Fix CORS preflight (OPTIONS) request handling
- Explicitly permit all OPTIONS requests for CORS preflight
- Use setAllowedOriginPatterns instead of setAllowedOrigins for wildcard
- Allow all headers and enable credentials

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>